# intaste

./: .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile.test  Makefile  NOTICE  README.md  TESTING.md  compose.dev.yaml  compose.gpu.yaml  compose.test.yaml  compose.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml  security.yml
assera-api/: .gitignore  Dockerfile  README.md  kubernetes-example.yaml  pyproject.toml
assera-api/app/: __init__.py  main.py
assera-api/app/core/: __init__.py  config.py  health.py
assera-api/app/core/llm/: __init__.py  base.py  factory.py  ollama.py  prompts.py
assera-api/app/core/search_agent/: base.py  factory.py  fess.py
assera-api/app/core/search_provider/: base.py  factory.py  fess.py
assera-api/app/core/security/: __init__.py  auth.py  middleware.py
assera-api/app/routers/: __init__.py  assist.py  assist_stream.py  health.py  models.py
assera-api/app/schemas/: __init__.py  assist.py  models.py
assera-api/app/services/: __init__.py  assist.py
assera-api/tests/: __init__.py  conftest.py
assera-api/tests/integration/: __init__.py  test_api_endpoints.py  test_streaming_endpoint.py
assera-api/tests/unit/: __init__.py  test_assist_service.py  test_fess_provider.py  test_health.py  test_llm_factory.py  test_ollama_client.py  test_search_provider_factory.py
assera-ui/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
assera-ui/app/: layout.tsx  page.tsx
assera-ui/e2e/: accessibility.spec.ts  citation-interaction.spec.ts  search-flow.spec.ts  security.spec.ts  streaming.spec.ts
assera-ui/src/libs/: apiClient.ts  sanitizer.ts  streamingClient.ts  utils.ts
assera-ui/src/store/: assist.store.ts  ui.store.ts
assera-ui/src/styles/: globals.css
assera-ui/src/types/: api.ts  ui.ts
assera-ui/tests/: setup.ts
assera-ui/tests/components/: AnswerBubble.test.tsx  EvidenceItem.test.tsx  QueryHistory.test.tsx  QueryInput.test.tsx
assera-ui/tests/libs/: sanitizer.test.ts  streamingClient.test.ts
assera-ui/tests/stores/: assist.store.test.ts  session.store.test.ts  ui.store.test.ts
assera-ui/tests/utils/: test-utils.tsx
docs/: README.md
docs/01_requirements/: implementation-status.md  project-overview.md
docs/02_architecture/: process-flow-design.md  search-provider-abstraction.md  streaming-responses.md  system-architecture.md
docs/03_api/: api-specification.md
docs/04_ui/: ui-design-specification.md
docs/05_deployment/: docker-compose-design.md  environment-configuration.md
docs/06_security/: security-design.md
docs/07_operations/: logging-audit-design.md  operations-monitoring.md
docs/08_development/: development-guidelines.md
intaste-api/: .dockerignore  Dockerfile  README.md  babel.cfg  kubernetes-example.yaml  pyproject.toml  pytest.ini
intaste-api/app/: __init__.py  main.py
intaste-api/app/core/: __init__.py  config.py  health.py
intaste-api/app/core/llm/: __init__.py  base.py  factory.py  ollama.py  prompts.py
intaste-api/app/core/llm/prompts/: __init__.py  definitions.py  models.py  registry.py
intaste-api/app/core/search_agent/: __init__.py  base.py  factory.py  fess.py  multi.py  scoring.py
intaste-api/app/core/search_provider/: __init__.py  base.py  factory.py  fess.py
intaste-api/app/core/security/: auth.py  middleware.py
intaste-api/app/i18n/: __init__.py
intaste-api/app/routers/: __init__.py  assist.py  assist_stream.py  health.py  models.py
intaste-api/app/schemas/: __init__.py  assist.py  common.py
intaste-api/app/services/: assist.py
intaste-api/locales/: messages.pot  test.pot
intaste-api/locales/de/LC_MESSAGES/: messages.mo  messages.po
intaste-api/locales/en/LC_MESSAGES/: messages.mo  messages.po
intaste-api/locales/es/LC_MESSAGES/: messages.mo  messages.po
intaste-api/locales/fr/LC_MESSAGES/: messages.mo  messages.po
intaste-api/locales/ja/LC_MESSAGES/: messages.mo  messages.po
intaste-api/locales/zh_CN/LC_MESSAGES/: messages.mo  messages.po
intaste-api/locales/zh_TW/LC_MESSAGES/: messages.mo  messages.po
intaste-api/tests/: __init__.py  conftest.py
intaste-api/tests/integration/: test_api_endpoints.py  test_health_endpoints.py  test_models_endpoints.py  test_streaming_edge_cases.py  test_streaming_endpoint.py
intaste-api/tests/unit/: test_assist_service.py  test_config.py  test_fess_provider.py  test_fess_search_agent.py  test_i18n.py  test_llm_factory.py  test_ollama_client.py  test_ollama_stream.py  test_prompts.py  test_scoring.py  test_search_provider_factory.py  test_security.py  test_validation.py
intaste-ui/: .eslintrc.json  Dockerfile  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
intaste-ui/app/: layout.tsx  page.tsx
intaste-ui/e2e/: accessibility.spec.ts  citation-interaction.spec.ts  search-flow.spec.ts  security.spec.ts  streaming.spec.ts
intaste-ui/src/libs/: apiClient.ts  sanitizer.ts  streamingClient.ts  utils.ts  uuid.ts
intaste-ui/src/providers/: FluentProvider.tsx  I18nProvider.tsx
intaste-ui/src/store/: assist.store.ts  language.store.ts  session.store.ts  ui.store.ts
intaste-ui/src/styles/: globals.css
intaste-ui/src/theme/: fluent-theme.ts
intaste-ui/src/types/: api.ts  i18n.ts
intaste-ui/tests/: setup.ts
intaste-ui/tests/components/: EmptyState.test.tsx  ErrorBanner.test.tsx  EvidenceItem.test.tsx  EvidencePanel.test.tsx  LanguageSwitcher.test.tsx  LatencyIndicator.test.tsx  (+2 more)
(+42 files in other folders)
